# SDR-Agent

./: .env.example  .gitignore  GITHUB_UPLOAD_CHECKLIST.md  README.md  main.py  pyproject.toml
agents/: company.py  contact.py  contact_improved.py  formatter.py  personalization.py  qualification.py  router.py
core/: config.py  graph.py  langsmith_config.py  models.py  prompt_manager.py  state.py
tools/: brightdata_mcp_subprocess.py  email_enrichment.py  sdr_intelligence.py  serp_parser.py  smart_scraping.py  web_search.py
utils/: tracing.py
